Incorrect pattern scaling https://bugs.webkit.org/show_bug.cgi?id=99870

Reviewed by Dirk Schulze.

Source/WebCore:

The pattern space transform scale should reflect the tile_size(user space)
to tile_image_size ratio, instead of tile_size to absolute_tile_size.

Test: svg/custom/pattern-scaling.svg

* rendering/svg/RenderSVGResourcePattern.cpp:
(WebCore::RenderSVGResourcePattern::applyResource):

LayoutTests:

* platform/chromium-linux/svg/custom/js-late-pattern-creation-expected.png:
* platform/chromium-linux/svg/custom/pattern-scaling-expected.png: Added.
* platform/chromium-linux/svg/custom/pattern-scaling-expected.txt: Added.
* platform/chromium-linux/svg/custom/pattern-with-transformation-expected.png:
* platform/chromium-linux/svg/transforms/text-with-pattern-inside-transformed-html-expected.png:
* platform/chromium-win/svg/custom/pattern-skew-transformed-expected.png:
* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:
* svg/custom/pattern-scaling.svg: Added.


Canonical link: https://commits.webkit.org/117909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131974 268f45cc-cd09-0410-ab3c-d52691b4dbfc